<resources>
    <string name="app_name">U movil</string>
    <string name="logo">logo</string>
    <string name="ii">INFORMACION DE INTERES</string>
    <string name="is">INGENIERIA DE SOFTWARE</string>
    <string name="Home">Home</string>
    <string name="s1">1.SEMESTRE</string>
    <string name="s2">2. SEMESTRE</string>
    <string name="s3">3. SEMESTRE</string>
    <string name="s4">4. SEMESTRE</string>
    <string name="s5">5. SEMESTRE</string>
    <string name="titulo">U Movil</string>
    <string name="Mead">MEAD</string>
    <string name="CI">CATEDRA INSTITUCIONAL</string>
    <string name="Pb">PROGRAMACION BASICA</string>
    <string name="Fm">FUNDAMENTOS DE MATEMATICAS</string>
    <string name="IIS">INTRODUCCION ING. SOFTWARE</string>
    <string name="CD">CALCULO DIFERENCIAL</string>
    <string name="vd">VIDEOS</string>
    <string name="no">NOTICIAS</string>
    <string name="t1">TIP´S</string>
    <string name="t2">CAMPUS</string>
    <string name="t3">GEEK</string>
    <string name="f1_menu">CONTACTENOS</string>
    <string name="f2_menu">ACERCA DE</string>
    <string name="f3_menu">INFORMACION</string>
    <string name="tips">TIPS</string>
    <string name="ta">TEXTOS DE AYUDA</string>
    <string name="tip_ci_1">Conocerte a ti mismo es indispensable para la realización de un proyecto de vida.</string>
    <string name="tip_ci_2">Rompe los paradigmas y sé positivo.</string>
    <string name="tip_ci_3">Plasma cada idea, meta o sueño que tengas por muy insignificante que parezca.</string>
    <string name="todo">TODO</string>
</resources>
