<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.codigo55.umovil.activitys.activity_is_uno">

    <!--Inicio toolbar 1-->

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:elevation="8dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/s1">

    </android.support.v7.widget.Toolbar>

    <!--Fin toolbar 1-->

    <!--Inicio del contenedor principal-->

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:orientation="vertical">

        <TextView
            android:layout_width="300dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:background="@drawable/iv_dashboard" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="40dp"
                android:paddingTop="10dp"
                android:paddingRight="40dp">

                <!--Bloque 1-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:background="#fff"
                    android:baselineAligned="false"
                    android:elevation="6dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="160dp"
                        android:layout_weight="1"
                        android:background="@drawable/iv_is"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:elevation="10dp"
                            android:gravity="center"
                            android:shadowColor="@color/primary_text"
                            android:shadowDx="1"
                            android:shadowDy="1"
                            android:shadowRadius="2"
                            android:text="@string/is"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

                <!--Bloque de asignaturas-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <!--asignatura 1-->

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="140dp"
                        android:layout_weight="1"
                        android:background="@color/accent"
                        android:elevation="6dp"
                        android:onClick="next_mead"
                        >

                        <ImageView
                            android:id="@+id/as1"
                            android:layout_width="80dp"
                            android:layout_height="75dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/v_me"
                            android:contentDescription="@string/Mead"

                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_alignParentBottom="true"
                            android:gravity="center"
                            android:text="@string/Mead"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <!--asignatura 2-->

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="140dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="@color/accent"
                        android:elevation="6dp"
                        android:onClick="next_ci">

                        <ImageView
                            android:id="@+id/as2"
                            android:layout_width="80dp"
                            android:layout_height="75dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/ic_v_ci"
                            android:contentDescription="@string/CI" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_alignParentBottom="true"
                            android:gravity="center"
                            android:text="@string/CI"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <!--asignatura 3-->

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="140dp"
                        android:layout_weight="1"
                        android:background="@color/accent"
                        android:elevation="6dp"
                        android:onClick="next_pb"
                        >

                        <ImageView
                            android:id="@+id/as3"
                            android:layout_width="80dp"
                            android:layout_height="75dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/v_pb"
                            android:contentDescription="@string/Pb" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_alignParentBottom="true"
                            android:gravity="center"
                            android:text="@string/Pb"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <!--asignatura 4-->

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="140dp"
                        android:layout_weight="1"
                        android:background="@color/accent"
                        android:elevation="6dp"
                        android:onClick="next_fm"
                        >

                        <ImageView
                            android:id="@+id/as4"
                            android:layout_width="80dp"
                            android:layout_height="75dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/v_fm"
                            android:contentDescription="@string/Fm" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_alignParentBottom="true"
                            android:gravity="center"
                            android:text="@string/Fm"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <!--asignatura 5-->

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="140dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="@color/accent"
                        android:elevation="6dp"
                        android:onClick="next_iis"
                        >

                        <ImageView
                            android:id="@+id/as5"
                            android:layout_width="80dp"
                            android:layout_height="75dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/v_ii"
                            android:contentDescription="@string/IIS" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_alignParentBottom="true"
                            android:gravity="center"
                            android:text="@string/IIS"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <!--asignatura 6-->

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="140dp"
                        android:layout_weight="1"
                        android:background="@color/accent"
                        android:elevation="6dp">

                        <ImageView
                            android:id="@+id/as6"
                            android:layout_width="80dp"
                            android:layout_height="75dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/v_cd"
                            android:contentDescription="@string/CD"
                            android:onClick="next_cd"

                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_alignParentBottom="true"
                            android:gravity="center"
                            android:text="@string/CD"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                </LinearLayout>


            </LinearLayout>

        </ScrollView>

    </android.support.v7.widget.LinearLayoutCompat>

</RelativeLayout>